--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/pubsub": "^4.5.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "fkill-cli": "^8.0.0"
   },
   "scripts": {
     "user-pub": "node src/user-pub.js",
